--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "dependencies": {
     "@apollo/react-hooks": "4.0.0",
     "@apollo/react-ssr": "4.0.0",
+    "@auth0/auth0-react": "^1.2.0",
+    "@auth0/nextjs-auth0": "^0.16.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@prisma/client": "2.16.0",
     "apollo-boost": "0.4.9",
     "apollo-link-http": "1.5.17",
@@ -37,6 +41,7 @@
     "@types/graphql": "14.5.0",
     "@types/node": "13.13.41",
     "@types/react": "17.0.1",
+    "prettier": "^2.2.1",
     "prisma": "2.16.0",
     "typescript": "4.1.3"
   }
