--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react": "17.0.1",
     "react-apollo": "3.1.5",
     "react-dom": "17.0.1",
-    "react-markdown": "5.0.3"
+    "react-markdown": "5.0.3",
+    "use-auth0-hooks": "^0.7.0"
   },
   "devDependencies": {
     "@types/graphql": "14.5.0",
