--- a/package.json
+++ b/package.json
@@ -26,20 +26,24 @@
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "2.19.2",
     "express": "4.17.1",
+    "firebase": "^8.2.6",
     "graphql": "15.5.0",
     "graphql-iso-date": "3.6.1",
     "graphql-tag": "2.11.0",
+    "jwt-decode": "^3.1.2",
     "next": "10.0.6",
     "nexus": "1.0.0",
     "nexus-plugin-prisma": "0.30.0",
     "react": "17.0.1",
     "react-apollo": "3.1.5",
     "react-dom": "17.0.1",
+    "react-firebaseui": "^4.1.0",
     "react-markdown": "5.0.3",
     "use-auth0-hooks": "^0.7.0"
   },
   "devDependencies": {
     "@types/graphql": "14.5.0",
+    "@types/graphql-iso-date": "^3.4.0",
     "@types/node": "13.13.41",
     "@types/react": "17.0.1",
     "prettier": "^2.2.1",
