--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react": "17.0.1",
     "prettier": "^2.2.1",
     "prisma": "2.16.0",
+    "ts-node": "^9.1.1",
     "typescript": "4.1.3"
   }
 }
