--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-link-http": "1.5.17",
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "2.19.2",
+    "apollo-upload-client": "^14.1.3",
     "express": "4.17.1",
     "firebase": "^8.2.6",
     "graphql": "15.5.0",
