--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@auth0/nextjs-auth0": "^0.16.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@prisma/client": "2.16.0",
+    "@prisma/client": "^2.16.0",
     "apollo-boost": "0.4.9",
     "apollo-link-http": "1.5.17",
     "apollo-link-schema": "1.2.5",
@@ -49,7 +49,7 @@
     "@types/node": "13.13.41",
     "@types/react": "17.0.1",
     "prettier": "^2.2.1",
-    "prisma": "2.16.0",
+    "prisma": "^2.16.0",
     "ts-node": "^9.1.1",
     "typescript": "4.1.3"
   }
