--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@prisma/client": "^2.16.0",
-    "apollo-boost": "0.4.9",
-    "apollo-link-http": "1.5.17",
+    "apollo-cache-inmemory": "^1.6.6",
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "2.19.2",
     "apollo-upload-client": "^14.1.3",
     "express": "4.17.1",
     "firebase": "^8.2.6",
+    "firebase-admin": "^9.5.0",
     "graphql": "15.5.0",
     "graphql-iso-date": "3.6.1",
+    "graphql-shield": "^7.5.0",
     "graphql-tag": "2.11.0",
     "graphql-upload": "^8.1.0",
     "jwt-decode": "^3.1.2",
