--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "@apollo/react-ssr": "4.0.0",
     "@auth0/auth0-react": "^1.2.0",
     "@auth0/nextjs-auth0": "^0.16.1",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
     "@prisma/client": "^2.16.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "2.19.2",
     "apollo-upload-client": "^14.1.3",
+    "bootstrap": "^4.6.0",
     "express": "4.17.1",
     "firebase": "^8.2.6",
     "firebase-admin": "^9.5.0",
@@ -39,6 +38,7 @@
     "nexus-plugin-prisma": "0.30.0",
     "react": "17.0.1",
     "react-apollo": "3.1.5",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "17.0.1",
     "react-firebaseui": "^4.1.0",
     "react-markdown": "5.0.3",
