--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase-admin": "^9.5.0",
     "graphql": "15.5.0",
     "graphql-iso-date": "3.6.1",
+    "graphql-middleware": "^6.0.4",
     "graphql-shield": "^7.5.0",
     "graphql-tag": "2.11.0",
     "graphql-upload": "^8.1.0",
@@ -42,6 +43,7 @@
     "react-dom": "17.0.1",
     "react-firebaseui": "^4.1.0",
     "react-markdown": "5.0.3",
+    "react-quill": "^1.3.5",
     "use-auth0-hooks": "^0.7.0"
   },
   "devDependencies": {
