--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql-tag": "2.11.0",
     "graphql-upload": "^8.1.0",
     "jwt-decode": "^3.1.2",
+    "katex": "^0.12.0",
     "next": "10.0.6",
     "nexus": "1.0.0",
     "nexus-plugin-prisma": "0.30.0",
