--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   "dependencies": {
     "@apollo/react-hooks": "4.0.0",
     "@apollo/react-ssr": "4.0.0",
-    "@auth0/auth0-react": "^1.2.0",
-    "@auth0/nextjs-auth0": "^0.16.1",
     "@prisma/client": "^2.16.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-link-schema": "1.2.5",
@@ -44,6 +42,7 @@
     "react-dom": "17.0.1",
     "react-firebaseui": "^4.1.0",
     "react-markdown": "5.0.3",
+    "react-pdf": "4.2.0",
     "react-quill": "^1.3.5",
     "use-auth0-hooks": "^0.7.0"
   },
