--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@
  NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=frontier-843e9.firebaseapp.com
  NEXT_PUBLIC_FIREBASE_PROJECT_ID=frontier-843e9
  NEXT_PUBLIC_FIREBASE_APP_ID=1:889463374410:web:1d39afd49efc8d07bbdcb3
+ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=frontier-843e9.appspot.com
  NEXT_PUBLIC_HOST=http://localhost:3000
