--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
-    "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json pages/api"
+    "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json pages/api",
+    "migrate:dev": "prisma migrate dev --preview-feature"
   },
   "keywords": [],
   "author": "",
@@ -45,7 +46,8 @@
     "react-markdown": "5.0.3",
     "react-pdf": "4.2.0",
     "react-quill": "^1.3.5",
-    "use-auth0-hooks": "^0.7.0"
+    "use-auth0-hooks": "^0.7.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/graphql": "14.5.0",
