--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-apollo": "3.1.5",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-typeahead": "^5.1.4",
+    "react-datepicker": "^3.5.0",
     "react-dom": "17.0.1",
     "react-firebaseui": "^4.1.0",
     "react-markdown": "5.0.3",
