--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql-upload": "^8.1.0",
     "jwt-decode": "^3.1.2",
     "katex": "^0.12.0",
+    "lodash": "^4.17.20",
     "next": "10.0.6",
     "nexus": "1.0.0",
     "nexus-plugin-prisma": "0.30.0",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@types/graphql": "14.5.0",
     "@types/graphql-iso-date": "^3.4.0",
+    "@types/lodash": "^4.14.168",
     "@types/node": "13.13.41",
     "@types/react": "17.0.1",
     "prettier": "^2.2.1",
