--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-markdown": "5.0.3",
     "react-pdf": "4.2.0",
     "react-quill": "^1.3.5",
+    "sass": "^1.32.8",
     "use-auth0-hooks": "^0.7.0",
     "uuid": "^8.3.2"
   },
