--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "17.0.1",
     "react-apollo": "3.1.5",
     "react-bootstrap": "^1.4.3",
+    "react-bootstrap-icons": "^1.3.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-datepicker": "^3.5.0",
     "react-dom": "17.0.1",
