--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json pages/api",
-    "migrate:dev": "prisma migrate dev --preview-feature"
+    "migrate:dev": "prisma migrate dev --preview-feature",
+    "reseed:dev": "rm prisma/dev.db && prisma migrate dev --preview-feature && prisma db seed --preview-feature"
   },
   "keywords": [],
   "author": "",
