--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
       If you need to change it, you should use the --compiler-options or provide a separate 
       tsconfig.json entirely.
     */
-    "module": "esnext",
-    "target": "ES2019",
+    "module": "commonjs",
+    "target": "es2020",
     "lib": [
       "dom",
       "dom.iterable",
