--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json pages/api",
     "migrate:dev": "prisma migrate dev --preview-feature",
-    "reseed:dev": "rm prisma/dev.db && prisma migrate dev --preview-feature && prisma db seed --preview-feature"
+    "reseed:dev": "NODE_ENV=dev && prisma migrate reset --preview-feature && prisma migrate dev --preview-feature"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "apollo-server-micro": "2.19.2",
     "apollo-upload-client": "^14.1.3",
     "bootstrap": "^4.6.0",
+    "dateformat": "^4.5.1",
     "express": "4.17.1",
     "firebase": "^8.2.6",
     "firebase-admin": "^9.5.0",
