--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "13.13.41",
     "@types/react": "17.0.1",
+    "cuid": "^2.1.8",
     "prettier": "^2.2.1",
     "prisma": "^2.18.0",
     "ts-node": "^9.1.1",
