--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "2.19.2",
     "apollo-upload-client": "^14.1.3",
+    "aws-sdk": "^2.859.0",
     "bootstrap": "^4.6.0",
     "dateformat": "^4.5.1",
     "express": "4.17.1",
@@ -48,9 +49,11 @@
     "react-datepicker": "^3.5.0",
     "react-dom": "17.0.1",
     "react-firebaseui": "^4.1.0",
-    "react-markdown": "5.0.3",
+    "react-katex": "^2.0.2",
+    "react-markdown": "^5.0.3",
     "react-pdf": "4.2.0",
     "react-quill": "^1.3.5",
+    "remark-math": "^4.0.0",
     "sass": "^1.32.8",
     "use-auth0-hooks": "^0.7.0",
     "uuid": "^8.3.2"
