--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-markdown": "^5.0.3",
     "react-pdf": "4.2.0",
     "react-quill": "^1.3.5",
+    "react-rnd": "^10.2.4",
     "remark-math": "^4.0.0",
     "sass": "^1.32.8",
     "use-auth0-hooks": "^0.7.0",
