--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-katex": "^2.0.2",
     "react-markdown": "^5.0.3",
     "react-quill": "^1.3.5",
+    "react-redux": "^7.2.3",
     "react-rnd": "^10.2.4",
     "remark-math": "^4.0.0",
     "sass": "^1.32.8",
