--- a/package.json
+++ b/package.json
@@ -55,8 +55,11 @@
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.3",
     "react-rnd": "^10.2.4",
+    "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
     "sass": "^1.32.8",
+    "shortid": "^2.2.16",
+    "unist-util-visit": "^2.0.3",
     "use-auth0-hooks": "^0.7.0",
     "uuid": "^8.3.2"
   },
