--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
  NEXT_PUBLIC_FIREBASE_APP_ID=1:889463374410:web:1d39afd49efc8d07bbdcb3
  NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=frontier-843e9.appspot.com
  NEXT_PUBLIC_HOST=http://localhost:3000
- DB_URL=mysql://dev:ardentcenser@localhost:3306/dev
+ PROVIDER=mysql
+ DB_URL=mysql://root:asuperlonguncrackablepassword@35.193.163.201/main
