--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "next": "10.0.6",
     "nexus": "1.0.0",
     "nexus-plugin-prisma": "0.31.0",
-    "pdfjs-dist": "^2.6.347",
+    "pdfjs-dist": "2.6.347",
     "react": "17.0.1",
     "react-apollo": "3.1.5",
     "react-bootstrap": "^1.4.3",
@@ -60,7 +60,6 @@
     "sass": "^1.32.8",
     "shortid": "^2.2.16",
     "unist-util-visit": "^2.0.3",
-    "use-auth0-hooks": "^0.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
