--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@apollo/react-hooks": "4.0.0",
     "@apollo/react-ssr": "4.0.0",
-    "@prisma/client": "^2.18.0",
+    "@prisma/client": "^2.23.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-schema": "1.2.5",
@@ -40,7 +40,7 @@
     "lodash": "^4.17.20",
     "next": "10.0.6",
     "nexus": "1.0.0",
-    "nexus-plugin-prisma": "0.31.0",
+    "nexus-plugin-prisma": "^0.35.0",
     "pdfjs-dist": "2.6.347",
     "react": "17.0.1",
     "react-apollo": "3.1.5",
