--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "certs": "node scripts/fetch-secrets.js",
     "start": "next start",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
@@ -63,6 +64,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@google-cloud/secret-manager": "^3.7.1",
     "@types/graphql-iso-date": "^3.4.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "13.13.41",
