--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-next",
+  "name": "frontier",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -30,30 +30,26 @@
     "express": "4.17.1",
     "firebase": "^8.2.6",
     "firebase-admin": "^9.5.0",
-    "graphql": "15.5.0",
-    "graphql-iso-date": "3.6.1",
+    "graphql": "^15.5.0",
     "graphql-middleware": "^6.0.4",
     "graphql-shield": "^7.5.0",
     "graphql-tag": "2.11.0",
-    "graphql-upload": "^8.1.0",
+    "graphql-upload": "^12.0.0",
     "jwt-decode": "^3.1.2",
     "katex": "^0.12.0",
     "lodash": "^4.17.20",
-    "next": "10.0.6",
+    "next": "^10.2.3",
     "nexus": "1.0.0",
     "nexus-plugin-prisma": "^0.35.0",
     "pdfjs-dist": "2.6.347",
     "react": "17.0.1",
-    "react-apollo": "3.1.5",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-icons": "^1.3.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-datepicker": "^3.5.0",
     "react-dom": "17.0.1",
-    "react-firebaseui": "^4.1.0",
-    "react-katex": "^2.0.2",
+    "react-firebaseui": "^5.0.0",
     "react-markdown": "^5.0.3",
-    "react-quill": "^1.3.5",
     "react-redux": "^7.2.3",
     "react-rnd": "^10.2.4",
     "remark-gfm": "^1.0.0",
@@ -65,7 +61,6 @@
   },
   "devDependencies": {
     "@google-cloud/secret-manager": "^3.7.1",
-    "@types/graphql-iso-date": "^3.4.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "13.13.41",
     "@types/react": "17.0.1",
