--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react": "17.0.1",
     "cuid": "^2.1.8",
     "prettier": "^2.2.1",
+    "prettier-plugin-organize-imports": "^2.1.0",
     "prisma": "^2.18.0",
     "ts-node": "^9.1.1",
     "typescript": "4.1.3"
