--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-schema": "1.2.5",
-    "apollo-server-micro": "2.19.2",
+    "apollo-server-micro": "^2.25.0",
     "apollo-upload-client": "^14.1.3",
     "aws-sdk": "^2.859.0",
     "bootstrap": "^4.6.0",
@@ -52,6 +52,7 @@
     "react-markdown": "^5.0.3",
     "react-redux": "^7.2.3",
     "react-rnd": "^10.2.4",
+    "react-split-pane": "^2.0.3",
     "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
     "sass": "^1.32.8",
