--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
-    "generate:nexus": "ts-node --transpile-only -P nexus.tsconfig.json pages/api",
+    "generate:nexus": "ts-node -r tsconfig-paths/register --transpile-only -P nexus.tsconfig.json pages/api",
     "migrate:dev": "prisma migrate dev --preview-feature",
     "reseed:dev": "NODE_ENV=dev && prisma migrate reset --preview-feature && prisma migrate dev --preview-feature"
   },
@@ -18,6 +18,10 @@
   "dependencies": {
     "@apollo/react-hooks": "4.0.0",
     "@apollo/react-ssr": "4.0.0",
+    "@draft-js-plugins/editor": "^4.1.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@prisma/client": "^2.23.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -27,6 +31,7 @@
     "aws-sdk": "^2.859.0",
     "bootstrap": "^4.6.0",
     "dateformat": "^4.5.1",
+    "draft-js": "^0.11.7",
     "express": "4.17.1",
     "firebase": "^8.2.6",
     "firebase-admin": "^9.5.0",
@@ -38,18 +43,22 @@
     "jwt-decode": "^3.1.2",
     "katex": "^0.12.0",
     "lodash": "^4.17.20",
+    "material-ui-dropzone": "^3.5.0",
     "next": "^10.2.3",
     "nexus": "1.0.0",
     "nexus-plugin-prisma": "^0.35.0",
+    "parchment": "^2.0.0-dev.2",
     "pdfjs-dist": "2.6.347",
-    "react": "17.0.1",
+    "react": "^16.0.0",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-icons": "^1.3.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-datepicker": "^3.5.0",
-    "react-dom": "17.0.1",
+    "react-dom": "^16.0.0",
     "react-firebaseui": "^5.0.0",
+    "react-katex": "^2.0.2",
     "react-markdown": "^5.0.3",
+    "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.3",
     "react-rnd": "^10.2.4",
     "react-split-pane": "^2.0.3",
@@ -62,6 +71,7 @@
   },
   "devDependencies": {
     "@google-cloud/secret-manager": "^3.7.1",
+    "@types/draft-js": "^0.11.3",
     "@types/lodash": "^4.14.168",
     "@types/node": "13.13.41",
     "@types/react": "17.0.1",
@@ -70,6 +80,7 @@
     "prettier-plugin-organize-imports": "^2.1.0",
     "prisma": "^2.18.0",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "4.1.3"
   }
 }
