Closer to article submission

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "certs": "node scripts/fetch-secrets.js",
     "start": "next start",
-    "sync:dev": "npm run generate && npm run migrate:dev",
+    "sync:dev": "npm run generate && npm run reseed:dev",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node -r tsconfig-paths/register --transpile-only -P nexus.tsconfig.json pages/api",
@@ -44,7 +44,6 @@
     "jwt-decode": "^3.1.2",
     "katex": "^0.12.0",
     "lodash": "^4.17.20",
-    "material-ui-dropzone": "^3.5.0",
     "next": "^10.2.3",
     "nexus": "1.0.0",
     "nexus-plugin-prisma": "^0.35.0",
@@ -56,6 +55,7 @@
     "react-bootstrap-typeahead": "^5.1.4",
     "react-datepicker": "^3.5.0",
     "react-dom": "^16.0.0",
+    "react-dropzone": "^10.2.2",
     "react-firebaseui": "^5.0.0",
     "react-katex": "^2.0.2",
     "react-markdown": "^5.0.3",
