Working image upload

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^16.0.0",
     "react-dropzone": "^10.2.2",
     "react-firebaseui": "^5.0.0",
+    "react-image-crop": "^8.6.12",
     "react-katex": "^2.0.2",
     "react-markdown": "^5.0.3",
     "react-quill": "^2.0.0-beta.2",
