--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@apollo/client": "^3.3.19",
     "@apollo/react-hooks": "4.0.0",
     "@apollo/react-ssr": "4.0.0",
+    "@date-io/date-fns": "1.3.13",
     "@draft-js-plugins/editor": "^4.1.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
     "@prisma/client": "^2.23.0",
     "apollo-client": "^2.6.10",
     "apollo-link-schema": "1.2.5",
