--- a/package.json
+++ b/package.json
@@ -17,23 +17,26 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@apollo/client": "^3.3.19",
+    "@apollo/client": "^3.4.17",
     "@apollo/react-hooks": "4.0.0",
     "@apollo/react-ssr": "4.0.0",
     "@date-io/date-fns": "1.3.13",
-    "@draft-js-plugins/editor": "^4.1.0",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@matejmazur/react-katex": "^3.1.3",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.3.10",
-    "@prisma/client": "^2.23.0",
+    "@mui/lab": "^5.0.0-alpha.55",
+    "@mui/material": "^5.1.0",
+    "@prisma/client": "2.23.0",
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "^2.25.0",
     "apollo-upload-client": "^14.1.3",
     "aws-sdk": "^2.859.0",
     "bootstrap": "^4.6.0",
     "dateformat": "^4.5.1",
-    "draft-js": "^0.11.7",
     "express": "4.17.1",
     "firebase": "^8.2.6",
     "firebase-admin": "^9.5.0",
@@ -50,13 +53,12 @@
     "nexus-plugin-prisma": "^0.35.0",
     "parchment": "^2.0.0-dev.2",
     "pdfjs-dist": "2.6.347",
-    "react": "^16.0.0",
+    "react": "^17.0.2",
     "react-datepicker": "^3.5.0",
-    "react-dom": "^16.0.0",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^10.2.2",
     "react-firebaseui": "^5.0.0",
     "react-image-crop": "^8.6.12",
-    "react-katex": "^2.0.2",
     "react-markdown": "^5.0.3",
     "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.3",
