Working review update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,14 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["components/*"],
-      "@/lib/*": ["lib/*"]
-    }
+      "@/components/*": [
+        "components/*"
+      ],
+      "@/lib/*": [
+        "lib/*"
+      ]
+    },
+    "incremental": true
   },
   "exclude": [
     "node_modules"
