--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@mui/lab": "^5.0.0-alpha.55",
     "@mui/material": "^5.1.0",
     "@prisma/client": "2.23.0",
+    "apollo-link-debounce": "^3.0.0",
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "^2.25.0",
-    "apollo-upload-client": "^14.1.3",
     "aws-sdk": "^2.859.0",
     "bootstrap": "^4.6.0",
     "dateformat": "^4.5.1",
@@ -49,7 +49,7 @@
     "jwt-decode": "^3.1.2",
     "katex": "^0.12.0",
     "lodash": "^4.17.20",
-    "next": "^10.2.3",
+    "next": "^12.0.4",
     "nexus": "1.0.0",
     "nexus-plugin-prisma": "^0.35.0",
     "parchment": "^2.0.0-dev.2",
@@ -81,9 +81,9 @@
     "cuid": "^2.1.8",
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^2.1.0",
-    "prisma": "^2.26.0",
+    "prisma": "2.23.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "4.1.3"
+    "typescript": "^4.3.2"
   }
 }
