--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "graphql-shield": "^7.5.0",
     "graphql-tag": "2.11.0",
     "graphql-upload": "^12.0.0",
+    "immutable": "^3.7.6",
     "jwt-decode": "^3.1.2",
     "katex": "^0.12.0",
     "lodash": "^4.17.20",
