--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@matejmazur/react-katex": "^3.1.3",
-    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.1.1",
     "@mui/lab": "^5.0.0-alpha.55",
     "@mui/material": "^5.1.0",
@@ -42,6 +41,7 @@
     "graphql-tag": "2.11.0",
     "graphql-upload": "^12.0.0",
     "immutable": "^3.7.6",
+    "javascript-time-ago": "^2.3.10",
     "jwt-decode": "^3.1.2",
     "katex": "^0.12.0",
     "lodash": "^4.17.20",
@@ -51,7 +51,6 @@
     "parchment": "^2.0.0-dev.2",
     "pdfjs-dist": "2.6.347",
     "react": "^17.0.2",
-    "react-datepicker": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^10.2.2",
     "react-firebaseui": "^5.0.0",
