--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "graphql-middleware": "^6.0.4",
     "graphql-shield": "^7.5.0",
     "graphql-tag": "2.11.0",
+    "graphql-type-json": "^0.3.2",
     "graphql-upload": "^12.0.0",
     "immutable": "^3.7.6",
     "javascript-time-ago": "^2.3.10",
