--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "@mui/icons-material": "^5.1.1",
     "@mui/lab": "^5.0.0-alpha.55",
     "@mui/material": "^5.1.0",
-    "@prisma/client": "2.23.0",
+    "@prisma/client": "^3.8.0",
     "apollo-link-debounce": "^3.0.0",
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "^2.25.0",
     "dateformat": "^4.5.1",
     "express": "4.17.1",
     "firebase": "^8.2.6",
-    "firebase-admin": "^9.5.0",
+    "firebase-admin": "^10.0.1",
     "graphql": "^15.5.0",
     "graphql-middleware": "^6.0.4",
     "graphql-shield": "^7.5.0",
@@ -47,8 +47,7 @@
     "katex": "^0.12.0",
     "lodash": "^4.17.20",
     "next": "^12.0.4",
-    "nexus": "1.0.0",
-    "nexus-plugin-prisma": "^0.35.0",
+    "nexus": "^1.1.0",
     "normalize-url": "^7.0.2",
     "parchment": "^2.0.0-dev.2",
     "pdfjs-dist": "2.6.347",
@@ -58,10 +57,9 @@
     "react-firebaseui": "^5.0.0",
     "react-image-crop": "^8.6.12",
     "react-markdown": "^5.0.3",
-    "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.3",
     "react-rnd": "^10.2.4",
-    "react-split-pane": "^2.0.3",
+    "react-split-pane": "^0.1.92",
     "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
     "sass": "^1.32.8",
@@ -78,7 +76,7 @@
     "cuid": "^2.1.8",
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^2.1.0",
-    "prisma": "2.23.0",
+    "prisma": "^3.8.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.3.2"
