--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apollo-link-debounce": "^3.0.0",
     "apollo-link-schema": "1.2.5",
     "apollo-server-micro": "^2.25.0",
+    "apollo-upload-client": "^17.0.0",
     "dateformat": "^4.5.1",
     "express": "4.17.1",
     "firebase": "^8.2.6",
@@ -40,7 +41,7 @@
     "graphql-shield": "^7.5.0",
     "graphql-tag": "2.11.0",
     "graphql-type-json": "^0.3.2",
-    "graphql-upload": "^12.0.0",
+    "graphql-upload": "11.0.0",
     "immutable": "^3.7.6",
     "javascript-time-ago": "^2.3.10",
     "jwt-decode": "^3.1.2",
